# advent-of-code

./: .gitignore  README.md
01/: sonar-sweep-1.ts  sonar-sweep-2.ts
02/: dive-2.ts
04/: giant-squid-1.ts  giant-squid-2.ts
05/: hydrothermal-venture-1.ts
06/: lanternfish.ts
08/: display.ts
09/: basin.ts
10/: syntax-2.ts
11/: dumbo.ts
12/: paths.ts
14/: polymerization-2.ts  polymerization.ts
15/: chitons.ts
16/: packet-decoder.ts
17/: trick-shot.ts
20/: trench-map-2.ts
2021/: README.md
2021/02/: dive-1.ts  dive-2.ts
2021/03/: binary-diagnostic-1.ts  binary-diagnostic-2.ts
2021/04/: giant-squid-1.ts
2021/05/: hydrothermal-venture-2.ts
2021/07/: whales-and-crabs.ts
2021/08/: display.ts
2021/09/: smoke.ts
2021/10/: syntax-1.ts
2021/12/: paths.ts
2021/13/: origami.ts
2021/16/: packet-decoder.ts
2021/18/: snailfish.ts
2021/20/: trench-map-1.ts
2021/22/: reactor-reboot-2.ts
2021/24/: alu-1.ts
2022/: README.md
2022/01/: calorie-counting.scala
2022/02/: rock-paper-scissors.scala
2022/03/: rucksack.scala
2022/04/: camp-cleanup.scala
2022/05/: supply-stacks.scala
2023/: pyproject.toml
2023/01/: solution1.py  solution2.py
2023/02/: solution1.py  solution2.py
2023/03/: solutions.py
2023/04/: solutions.py
2023/05/: solutions.py
2023/06/: solutions.py
2023/07/: solutions.py
2023/08/: solutions.py
2023/09/: solutions.py
2023/11/: solutions.py
2023/14/: solutions.py
21/: dirac-dice.ts  dirac-doe.ts  quantum-dice.ts
22/: reactor-reboot-1.ts  reactor-reboot.ts
25/: sea-cucumbers.ts
(+11 files in other folders)
