[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = "Advent of Code 2023 in Python"
authors = ["Tom Jansen <tomjansen25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
pydantic = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
